--- a/app/src/main/res/layout/activity_student_style.xml
+++ b/app/src/main/res/layout/activity_student_style.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnCount="5"
     android:rowCount="5"
-    android:id="@+id/test"
+    android:id="@+id/student"
     tools:context=".StudentStyleActivity">
 
     <Button
