Add a lot of functionality to the EnterDataActivity and added more edt to the activity. As well as other stuff

--- a/app/src/main/res/layout/activity_adult_style.xml
+++ b/app/src/main/res/layout/activity_adult_style.xml
@@ -350,6 +350,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="487dp"
         android:layout_marginEnd="47dp"
+        android:textColor="@color/black"
         android:ems="10"
         android:text="Estimated monthly spending (dependencies + leisure/other):"
         android:textSize="18sp"
