--- a/app/src/main/res/layout/activity_business_style.xml
+++ b/app/src/main/res/layout/activity_business_style.xml
@@ -183,7 +183,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="340dp"
-        android:text="Income:"
+        android:text="Business Income:"
         android:textSize="30sp" />
 
     <EditText
